Fix nav toggle being too large

--- a/user-service/src/assets/css/style.css
+++ b/user-service/src/assets/css/style.css
@@ -302,7 +302,7 @@ button:hover {
     }
 
     .nav-toggle {
-        display: block;
+        display: contents;
     }
 
     .main-content {
